# take_home_exam

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  instructions.md  pyproject.toml
.github/workflows/: ci.yml
mock_api/: audit_log.py  base.py  member_data.py  pricing_ml_model.py  product_info.py
pricer_service/: errors.py  features.py  gateway.py  main.py  service.py  settings.py
shared/schemas/: request.py  response.py
tests/: test_api.py  test_features.py  test_mock_api.py  test_service.py
