[project]
name = "mlapps-takehome-exam"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "faker",
    "fastapi",
    "uvicorn",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mock_api", "pricer_service", "shared"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.5",
]

[tool.mypy]
packages = ["mock_api", "pricer_service", "shared"]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
